--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lightroute",
+  "name": "light-route",
   "version": "1.0.0",
   "description": "A simple and lightweight JavaScript Router",
   "main": "index.js",
